Fixed modal z-index

--- a/angular/clientes-app/src/app/clientes/detalle/detalle.component.css
+++ b/angular/clientes-app/src/app/clientes/detalle/detalle.component.css
@@ -5,7 +5,7 @@
     left: 0px;
     width: 100%;
     height: 100%;
-    z-index: 1000;
+    z-index: 1040;
 }
 
 .animation{
